--- a/client/modules/Lane/Lane.css
+++ b/client/modules/Lane/Lane.css
@@ -1,1 +1,27 @@
 /* Lane styles */
+.Lanes {
+  color: blue;
+  display: flex;
+}
+
+.Lane {
+  color: blue;
+  border: 1px solid black;
+  margin: 0 1rem;
+}
+
+.LaneHeader {
+  color: blue;
+}
+
+.LaneAddNote {
+  color: blue;
+}
+
+.LaneName {
+  color: blue;
+}
+
+.LaneDelete {
+  color: blue;
+}
