--- a/client/main.css
+++ b/client/main.css
@@ -28,9 +28,7 @@ input:-moz-placeholder {
 }
 
 body {
-	background: #FFF;
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
-	background-image: url('https://cdn.pixabay.com/photo/2016/04/15/04/02/water-1330252_960_720.jpg');
-    background-size: cover;
+	background-color: #1e272e;
 }
