--- a/client/main.css
+++ b/client/main.css
@@ -30,5 +30,5 @@ input:-moz-placeholder {
 body {
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
-	background-color: #1e272e;
+	background-color: #2d3436;
 }
